tests/baselines/reference/project/quotesInFileAndDirectoryNames/node/quotesInFileAndDirectoryNames.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== li'b/class'A.ts (0 errors) ====
    module test {
        export class ClassA
        {
            public method() { }
        }
    }
==== m'ain.ts (0 errors) ====
    /// <reference path="li'b/class'A.ts" />
    
    class ClassC extends test.ClassA {
    }